--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -32,6 +32,9 @@
         <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
       {% endif %}
     </h2>
+    <h4 style="margin-top:3px;">
+      {{ post.date | date: '%B %d, %Y' }}
+    </h4>
     {% if post.read_time %}
       <p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %}
