--- a/_sass/minimal-mistakes/_mixins.scss
+++ b/_sass/minimal-mistakes/_mixins.scss
@@ -4,9 +4,9 @@
 
 %tab-focus {
   /* Default*/
-  outline: thin dotted $warning-color;
+  outline: thin dotted $light-gray;
   /* Webkit*/
-  outline: 5px auto $warning-color;
+  /*outline: 5px auto $warning-color;*/
   outline-offset: -2px;
 }
 
