--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,6 +8,7 @@
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
+@import "badge";
 @import "publications";
 @import "quotes";
 @import "alerts";
