Tweaks to the wording on descriptions

--- a/_sass/publications.scss
+++ b/_sass/publications.scss
@@ -1,6 +1,10 @@
 .publication {
   margin-top: 25px;
 
+  .publication-title {
+    font-size: 20px;
+  }
+
   .publication-detail {
     font-size: 15px;
     margin-left: 20px;
