--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -13,3 +13,12 @@
   </a>
 </li>
 {% endif %}
+
+
+{% if author.orcid %}
+<li>
+  <a href="https://orcid.org/{{ author.orcid }}" itemprop="sameAs">
+    <i class="fab fa-fw fa-orcid" aria-hidden="true"></i> ORCID
+  </a>
+</li>
+{% endif %}
