--- a/_includes/analytics-providers/google-ua-4.html
+++ b/_includes/analytics-providers/google-ua-4.html
@@ -1,3 +1,4 @@
+<!-- Support for the new Google Analytics 4 properties -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.analytics.google.tracking_id }}"></script>
 <script>
