adding the link to mastodon to author profile

--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -22,3 +22,13 @@
   </a>
 </li>
 {% endif %}
+
+
+
+{% if author.mastodon %}
+<li>
+  <a href="{{ author.mastodon }}" itemprop="sameAs">
+    <i class="fab fa-fw fa-mastodon" aria-hidden="true"></i> Mastodon
+  </a>
+</li>
+{% endif %}
