Adding rel=me for mastodon to the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,6 +21,9 @@
     {% if site.author.linkedin %}
     <li><a href="https://www.linkedin.com/in/{{ site.author.linkedin }}"><i class="fab fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a></li>
     {% endif %}
+    {% if site.author.mastodon %}
+    <li><a href="{{ site.author.mastodon }}" rel="me"><i class="fab fa-fw fa-mastodon" aria-hidden="true"></i> Mastodon</a></li>
+    {% endif %}
     <li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}"><i class="fas fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a></li>
   </ul>
 </div>
